--- a/C.html
+++ b/C.html
@@ -6,6 +6,7 @@
 	<title>只是查看能不能实现js功能</title>
 </head>
 <body>
+	<?php echo "PHPtest"?>
 	<span id="span1">通过点击改变文字</span>
 	<button id="button1">点击</button>
 	<script>
